--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.4",
+    "@storybook/react": "^6.2.8",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
