--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "node /.storybook/main.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
+    "heroku-postbuild": "npm run storybook",
     "watch": "npm-watch "
   },
   "watch": {
